--- a/index.html
+++ b/index.html
@@ -9,34 +9,28 @@
     
     <style>
         :root { --gold: #ffd700; }
-        body { margin: 0; padding: 0; background: #000; color: #fff; font-family: sans-serif; overflow: hidden; height: 100vh; }
-        .app { display: flex; flex-direction: column; height: 100vh; background: radial-gradient(circle, #1a0033 0%, #000 100%); }
+        body { margin: 0; padding: 0; background: #000; color: #fff; font-family: sans-serif; overflow: hidden; height: 100vh; background: radial-gradient(circle, #1a0033 0%, #000 100%); }
+        .app { display: flex; flex-direction: column; height: 100vh; }
         .header { background: rgba(0,0,0,0.9); padding: 12px; display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid var(--gold); }
         
         /* 📺 المربع الصغير */
-        #yt-box { 
-            width: 180px; height: 110px; position: fixed; top: 70px; left: 10px; 
-            z-index: 1000; border: 2px solid var(--gold); border-radius: 8px; background: #000;
-            box-shadow: 0 0 15px var(--gold); display: none;
-        }
+        #yt-box { width: 170px; height: 100px; position: fixed; top: 65px; left: 10px; z-index: 1000; border: 2px solid var(--gold); border-radius: 8px; background: #000; display: none; }
         #yt-box.active { display: block; }
 
         #chat-win { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 8px; }
         .bubble { max-width: 85%; padding: 10px; border-radius: 12px; background: rgba(255,255,255,0.08); border: 1px solid #333; font-size: 14px; text-align: right; }
         .me { align-self: flex-start; border-right: 3px solid var(--gold); background: rgba(255,215,0,0.1); }
 
-        /* الصاروخ كما طلبت (لم أغير مكانه) */
+        /* 🚀 الصاروخ رجع لمكانه الأصلي (اليسار) */
         .footer { background: #000; padding: 10px; display: flex; border-top: 1px solid #222; align-items: center; }
+        .btn-send { background: none; border: none; font-size: 28px; cursor: pointer; margin-left: 10px; }
         #mInp { flex: 1; background: #111; color: #fff; padding: 12px; border-radius: 20px; border: 1px solid #444; outline: none; text-align: right; }
-        .btn-send { background: none; border: none; font-size: 28px; cursor: pointer; margin-right: 10px; }
 
         .side { position: fixed; top: 0; width: 270px; height: 100vh; background: #050505; transition: 0.3s; z-index: 2000; border: 1px solid var(--gold); }
         #side-l { left: -275px; } #side-r { right: -275px; }
         .open { left: 0 !important; right: 0 !important; }
-
         .box { background: rgba(255,215,0,0.05); margin: 10px; padding: 10px; border-radius: 8px; border: 1px solid #222; }
         .btn-gold { width: 100%; padding: 10px; margin: 5px 0; background: #111; color: #fff; border: 1px solid var(--gold); border-radius: 5px; cursor: pointer; }
-        .search-input { width: 100%; padding: 10px; background: #000; border: 1px solid var(--gold); color: #fff; border-radius: 5px; }
     </style>
 </head>
 <body onclick="closeAll()">
@@ -65,9 +59,9 @@
     <div id="side-l" class="side" onclick="event.stopPropagation()">
         <h3 style="text-align:center; color:var(--gold);">🎬 رادار المملكة</h3>
         <div class="box">
-            <small style="color:var(--gold)">اكتب اسم الفيديو فقط:</small>
-            <input type="text" id="searchQ" class="search-input" placeholder="مثلاً: اغاني عراقية 2024">
-            <button class="btn-gold" onclick="sendSearch()">بث للجميع فوراً 📡</button>
+            <small style="color:var(--gold)">ابحث باسم الأغنية فقط:</small>
+            <input type="text" id="ytQ" placeholder="اكتب هنا..." style="width:100%; padding:10px; margin-top:5px; background:#000; color:#fff; border:1px solid var(--gold); border-radius:5px;">
+            <button class="btn-gold" onclick="startBroadcast()">بث للجميع 📡</button>
             <button class="btn-gold" style="color:red;" onclick="db.ref('yt_sync').set({a:'stop'})">إيقاف ✖</button>
         </div>
     </div>
@@ -82,12 +76,11 @@
     localStorage.setItem('chatId', uID);
     db.ref('status/' + uID).set({ n: uName });
 
-    // 🚀 الحل الذكي: البحث بالكلمات عبر تحويلها لقائمة تشغيل مؤقتة
-    function sendSearch() {
-        const q = document.getElementById('searchQ').value.trim();
+    function startBroadcast() {
+        const q = document.getElementById('ytQ').value.trim();
         if(!q) return;
         db.ref('yt_sync').set({ a: 'play', q: q, t: Date.now() });
-        document.getElementById('searchQ').value = "";
+        document.getElementById('ytQ').value = "";
         closeAll();
     }
 
@@ -96,7 +89,7 @@
         const box = document.getElementById('yt-box');
         const player = document.getElementById('player');
         if(v && v.a === 'play') {
-            // استخدام نوع القائمة 'search' لجلب أول نتيجة
+            // حل نهائي: استخدام رابط البحث الرسمي من يوتيوب ليعمل عند الجميع
             player.src = `https://www.youtube.com/embed?listType=search&list=${encodeURIComponent(v.q)}&autoplay=1`;
             box.classList.add('active');
         } else {
