--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
     
     <style>
         :root { --gold: #ffd700; }
-        body { margin: 0; padding: 0; background: #000; color: #fff; font-family: sans-serif; overflow: hidden; height: 100vh; background: radial-gradient(circle, #1a0033 0%, #000 100%); }
-        .app { display: flex; flex-direction: column; height: 100vh; }
+        body { margin: 0; padding: 0; background: #000; color: #fff; font-family: sans-serif; overflow: hidden; height: 100vh; }
+        .app { display: flex; flex-direction: column; height: 100vh; background: radial-gradient(circle, #1a0033 0%, #000 100%); }
         .header { background: rgba(0,0,0,0.9); padding: 12px; display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid var(--gold); }
         
         /* 📺 المربع الصغير */
-        #yt-box { width: 170px; height: 100px; position: fixed; top: 65px; left: 10px; z-index: 1000; border: 2px solid var(--gold); border-radius: 8px; background: #000; display: none; }
+        #yt-box { width: 180px; height: 110px; position: fixed; top: 70px; left: 10px; z-index: 1000; border: 2px solid var(--gold); border-radius: 8px; background: #000; display: none; }
         #yt-box.active { display: block; }
 
         #chat-win { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 8px; }
         .bubble { max-width: 85%; padding: 10px; border-radius: 12px; background: rgba(255,255,255,0.08); border: 1px solid #333; font-size: 14px; text-align: right; }
         .me { align-self: flex-start; border-right: 3px solid var(--gold); background: rgba(255,215,0,0.1); }
 
-        /* 🚀 الصاروخ رجع لمكانه الأصلي (اليسار) */
-        .footer { background: #000; padding: 10px; display: flex; border-top: 1px solid #222; align-items: center; }
-        .btn-send { background: none; border: none; font-size: 28px; cursor: pointer; margin-left: 10px; }
-        #mInp { flex: 1; background: #111; color: #fff; padding: 12px; border-radius: 20px; border: 1px solid #444; outline: none; text-align: right; }
+        /* 🚀 تثبيت الصاروخ بجانب النص (الجهة اليمنى للشاشة) */
+        .footer { background: #000; padding: 10px; display: flex; border-top: 1px solid #222; align-items: center; justify-content: flex-end; }
+        #mInp { flex: 1; background: #111; color: #fff; padding: 12px; border-radius: 20px; border: 1px solid #444; outline: none; text-align: right; margin-right: 10px; }
+        .btn-send { background: none; border: none; font-size: 28px; cursor: pointer; }
 
         .side { position: fixed; top: 0; width: 270px; height: 100vh; background: #050505; transition: 0.3s; z-index: 2000; border: 1px solid var(--gold); }
         #side-l { left: -275px; } #side-r { right: -275px; }
@@ -42,12 +42,12 @@
             <button onclick="toggleS('r', event)" style="background:none; border:none; font-size:24px; color:var(--gold);">👥</button>
         </div>
 
-        <div id="yt-box"><iframe id="player" width="100%" height="100%" src="" frameborder="0" allow="autoplay"></iframe></div>
+        <div id="yt-box"><iframe id="player" width="100%" height="100%" src="" frameborder="0" allow="autoplay; encrypted-media"></iframe></div>
         <div id="chat-win"></div>
 
         <div class="footer" onclick="event.stopPropagation()">
-            <button class="btn-send" onclick="sendMsg()">🚀</button>
             <input type="text" id="mInp" placeholder="تحدث يا ملك..." onkeydown="if(event.key==='Enter') sendMsg()">
+            <button class="btn-send" onclick="sendMsg()">🚀</button>
         </div>
     </div>
 
@@ -59,10 +59,11 @@
     <div id="side-l" class="side" onclick="event.stopPropagation()">
         <h3 style="text-align:center; color:var(--gold);">🎬 رادار المملكة</h3>
         <div class="box">
-            <small style="color:var(--gold)">ابحث باسم الأغنية فقط:</small>
-            <input type="text" id="ytQ" placeholder="اكتب هنا..." style="width:100%; padding:10px; margin-top:5px; background:#000; color:#fff; border:1px solid var(--gold); border-radius:5px;">
-            <button class="btn-gold" onclick="startBroadcast()">بث للجميع 📡</button>
-            <button class="btn-gold" style="color:red;" onclick="db.ref('yt_sync').set({a:'stop'})">إيقاف ✖</button>
+            <small style="color:var(--gold)">ابحث عن أي فيديو بالاسم:</small>
+            <input type="text" id="ytSearch" placeholder="اكتب هنا..." style="width:100%; padding:8px; margin-top:5px; background:#000; color:#fff; border:1px solid var(--gold); border-radius:5px;">
+            <button class="btn-gold" onclick="doSearch()">بحث في يوتيوب 🔍</button>
+            <p id="searchResult" style="font-size: 11px; margin-top: 5px; text-align: center; color: #aaa;"></p>
+            <button class="btn-gold" style="color:red;" onclick="db.ref('yt_sync').set({a:'stop'})">إيقاف التشغيل ✖</button>
         </div>
     </div>
 
@@ -76,12 +77,17 @@
     localStorage.setItem('chatId', uID);
     db.ref('status/' + uID).set({ n: uName });
 
-    function startBroadcast() {
-        const q = document.getElementById('ytQ').value.trim();
+    // 🔍 وظيفة البحث بدون روابط (تفتح نافذة يوتيوب للنتائج فقط)
+    function doSearch() {
+        const q = document.getElementById('ytSearch').value.trim();
         if(!q) return;
-        db.ref('yt_sync').set({ a: 'play', q: q, t: Date.now() });
-        document.getElementById('ytQ').value = "";
-        closeAll();
+        // نفتح نتائج البحث في صفحة خارجية لكي تختار الفيديو وتنسخ معرّفه (هذا الحل الأضمن ليوتيوب حالياً)
+        window.open(`https://www.youtube.com/results?search_query=${encodeURIComponent(q)}`, '_blank');
+        const vidId = prompt("بعد فتح الفيديو، انسخ الرموز التي بعد (v=) وضعتها هنا لتبث للكل:");
+        if(vidId) {
+            db.ref('yt_sync').set({ a: 'play', id: vidId, t: Date.now() });
+            closeAll();
+        }
     }
 
     db.ref('yt_sync').on('value', s => {
@@ -89,8 +95,7 @@
         const box = document.getElementById('yt-box');
         const player = document.getElementById('player');
         if(v && v.a === 'play') {
-            // حل نهائي: استخدام رابط البحث الرسمي من يوتيوب ليعمل عند الجميع
-            player.src = `https://www.youtube.com/embed?listType=search&list=${encodeURIComponent(v.q)}&autoplay=1`;
+            player.src = "https://www.youtube.com/embed/" + v.id + "?autoplay=1";
             box.classList.add('active');
         } else {
             player.src = ""; box.classList.remove('active');
