--- a/index.html
+++ b/index.html
@@ -7,31 +7,30 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
-        :root { --gold: #ffd700; --bg: #000; }
+        :root { --gold: #ffd700; --bg: #000; --card: #111; }
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; outline: none; }
         body, html { margin: 0; padding: 0; width: 100%; height: 100%; background: #000; color: #fff; font-family: sans-serif; overflow: hidden; }
 
         .app { display: flex; flex-direction: column; height: 100vh; }
         .header { height: 60px; background: #0a0a0a; border-bottom: 2px solid var(--gold); display: flex; justify-content: space-between; align-items: center; padding: 0 15px; }
 
-        #chat-win { flex: 1; overflow-y: auto; padding: 10px 15px 140px 15px; display: flex; flex-direction: column; gap: 10px; }
+        #chat-win { flex: 1; overflow-y: auto; padding: 10px 15px 150px 15px; display: flex; flex-direction: column; gap: 10px; }
         .bubble { max-width: 85%; padding: 10px; border-radius: 15px; background: #111; border: 1px solid #222; position: relative; }
-        .admin-msg { border: 2px solid var(--gold) !important; }
+        .admin-msg { border: 2px solid var(--gold) !important; box-shadow: 0 0 10px rgba(255,215,0,0.2); }
 
         /* منطقة اليوتيوب */
         #yt-container { position: fixed; top: 65px; left: 10px; width: 160px; height: 100px; z-index: 500; border: 2px solid var(--gold); display: none; background: #000; }
 
-        /* منطقة الكتابة - حل نهائي للموبايل */
+        /* منطقة الكتابة */
         .input-box { position: fixed; bottom: 0; left: 0; right: 0; background: #080808; border-top: 2px solid #333; padding: 10px; z-index: 2000; }
         .footer { display: flex; align-items: center; gap: 10px; }
         #mInp { flex: 1; background: #1a1a1a; border: 1px solid #444; color: #fff; border-radius: 20px; padding: 10px 15px; font-size: 16px; height: 45px; }
-        
-        /* زر الإرسال - تم تكبيره للمس */
-        .send-btn { background: var(--gold); color: #000; border: none; border-radius: 50%; width: 50px; height: 50px; font-size: 22px; cursor: pointer; display: flex; align-items: center; justify-content: center; flex-shrink: 0; }
+        .send-btn { background: var(--gold); color: #000; border: none; border-radius: 50%; width: 48px; height: 48px; font-size: 20px; cursor: pointer; display: flex; align-items: center; justify-content: center; flex-shrink: 0; }
 
-        .menu { position: fixed; top: 0; width: 85%; height: 100%; background: #0a0a0a; z-index: 3000; border: 1px solid var(--gold); display: none; overflow-y: auto; transition: 0.3s; }
+        /* تصغير قائمة المتصلين والقائمة الجانبية */
+        .menu { position: fixed; top: 0; width: 70%; height: 100%; background: #0a0a0a; z-index: 3000; border: 1px solid var(--gold); display: none; overflow-y: auto; transition: 0.3s; }
         .menu.show { display: block; }
-        .btn-style { width: 100%; padding: 12px; background: #111; color: var(--gold); border: 1px solid var(--gold); border-radius: 10px; margin-bottom: 10px; font-weight: bold; }
+        .btn-style { width: 100%; padding: 10px; background: #111; color: var(--gold); border: 1px solid var(--gold); border-radius: 10px; margin-bottom: 10px; font-weight: bold; font-size: 14px; }
     </style>
 </head>
 <body>
@@ -52,29 +51,34 @@
             <button onclick="document.getElementById('msg-img-file').click()" style="background:none; border:none; color:var(--gold); font-size:24px;">📷</button>
             <input type="file" id="msg-img-file" hidden accept="image/*" onchange="sendImg(this)">
             <input type="text" id="mInp" placeholder="اكتب هنا..." onkeydown="if(event.key==='Enter') doSend()">
-            <button id="realSendBtn" class="send-btn">🚀</button>
+            <button id="realSendBtn" onclick="doSend()" class="send-btn">🚀</button>
         </div>
     </div>
 </div>
 
 <div id="menu-l" class="menu" style="left:0;">
-    <div style="padding:20px;">
+    <div style="padding:15px;">
         <center>
-            <img id="p-img" src="https://via.placeholder.com/90" style="width:90px; height:90px; border-radius:50%; border:2px solid var(--gold); object-fit:cover;" onclick="document.getElementById('p-file').click()">
+            <img id="p-img" src="https://via.placeholder.com/80" style="width:80px; height:80px; border-radius:50%; border:2px solid var(--gold); object-fit:cover;" onclick="document.getElementById('p-file').click()">
             <input type="file" id="p-file" hidden onchange="changeP(this)">
-            <p style="color:var(--gold)">اضغط لتغيير الصورة</p>
+            <p style="color:var(--gold); font-size:12px;">تغيير الصورة</p>
         </center>
-        <input type="text" id="newName" style="width:100%; padding:12px; margin:15px 0; background:#111; color:#fff;" placeholder="اسم جديد...">
-        <button class="btn-style" onclick="saveP()">حفظ ✅</button>
-        <hr>
-        <h4 style="color:var(--gold)">🎬 يوتيوب</h4>
-        <input type="text" id="ytInp" style="width:100%; padding:10px;" placeholder="اسم الأغنية...">
-        <button class="btn-style" onclick="ytS()">تشغيل 📡</button>
+        <input type="text" id="newName" style="width:100%; padding:10px; margin:10px 0; background:#111; border:1px solid #333; color:#fff;" placeholder="اسم جديد...">
+        <button class="btn-style" onclick="saveP()">حفظ</button>
+        <hr style="border:0.5px solid #222;">
+        <input type="text" id="ytInp" style="width:100%; padding:8px; margin-bottom:5px;" placeholder="بحث يوتيوب...">
+        <button class="btn-style" onclick="ytS()">تشغيل 🎬</button>
         <button class="btn-style" onclick="closeAll()">إغلاق</button>
     </div>
 </div>
 
-<div id="menu-r" class="menu" style="right:0;"><div style="padding:20px;"><h3>المتصلون</h3><div id="u-list"></div></div></div>
+<div id="menu-r" class="menu" style="right:0;">
+    <div style="padding:15px;">
+        <h4 style="text-align:center; color:var(--gold); margin-top:0;">👥 المتصلون</h4>
+        <div id="u-list"></div>
+        <button class="btn-style" onclick="closeAll()" style="margin-top:20px;">إغلاق</button>
+    </div>
+</div>
 
 <script>
     const API_KEY = "AIzaSyC4wFkLrA_BlNzreseXQLeSp_40Gbmu9VU";
@@ -84,9 +88,9 @@
 
     let uID = localStorage.getItem('chatId') || "U_" + Math.floor(Math.random()*999999);
     localStorage.setItem('chatId', uID);
-    let mySet = JSON.parse(localStorage.getItem('mySet')) || { n: "عضو", img: "https://via.placeholder.com/90", r: "user" };
+    let mySet = JSON.parse(localStorage.getItem('mySet')) || { n: "عضو جديد", img: "https://via.placeholder.com/80", r: "user" };
 
-    // --- تسجيل الدخول السري ---
+    // دخول المالك السري (3 ثواني على الترس)
     let timer;
     const setBtn = document.getElementById('setBtn');
     setBtn.addEventListener('mousedown', () => timer = setTimeout(adminL, 3000));
@@ -98,11 +102,6 @@
         let p = prompt("رمز الإمبراطور:");
         if(p === "1234") { mySet.r = "admin"; mySet.n = "المالك علوش 👑"; saveP(); location.reload(); }
     }
-
-    // --- حل مشكلة زر الإرسال في الموبايل ---
-    const sendBtn = document.getElementById('realSendBtn');
-    sendBtn.addEventListener('click', doSend);
-    sendBtn.addEventListener('touchstart', (e) => { e.preventDefault(); doSend(); });
 
     function doSend() {
         const i = document.getElementById('mInp');
@@ -139,19 +138,24 @@
         }
     }
 
-    db.ref('main_msgs').limitToLast(20).on('child_added', s => {
-        const d = s.val(); const k = s.key;
-        const div = document.createElement('div');
-        div.className = `bubble ${d.r === 'admin' ? 'admin-msg' : ''}`;
-        div.style.alignSelf = d.uid === uID ? 'flex-end' : 'flex-start';
-        let h = `<div style="display:flex; align-items:center; gap:8px;"><img src="${d.img}" style="width:30px;height:30px;border-radius:50%;"><b style="color:var(--gold);font-size:12px;">${d.n}</b>`;
-        if(mySet.r === 'admin') h += `<span onclick="db.ref('main_msgs/${k}').remove()" style="color:red;margin-right:10px;">🗑️</span>`;
-        h += `</div>`;
-        if(d.t) h += `<div style="margin-top:5px;">${d.t}</div>`;
-        if(d.imgMsg) h += `<img src="${d.imgMsg}" style="width:100%;border-radius:10px;margin-top:5px;">`;
-        div.innerHTML = h;
-        document.getElementById('chat-win').appendChild(div);
-        document.getElementById('chat-win').scrollTop = document.getElementById('chat-win').scrollHeight;
+    // جلب الرسائل وإصلاح الحذف
+    db.ref('main_msgs').on('value', s => {
+        const win = document.getElementById('chat-win');
+        win.innerHTML = "";
+        s.forEach(child => {
+            const d = child.val(); const k = child.key;
+            const div = document.createElement('div');
+            div.className = `bubble ${d.r === 'admin' ? 'admin-msg' : ''}`;
+            div.style.alignSelf = d.uid === uID ? 'flex-end' : 'flex-start';
+            let h = `<div style="display:flex; align-items:center; gap:8px;"><img src="${d.img}" style="width:25px;height:25px;border-radius:50%;"><b style="color:var(--gold);font-size:11px;">${d.n}</b>`;
+            if(mySet.r === 'admin') h += `<span onclick="db.ref('main_msgs/${k}').remove()" style="color:red;margin-right:10px;cursor:pointer;">🗑️</span>`;
+            h += `</div>`;
+            if(d.t) h += `<div style="margin-top:4px; font-size:15px;">${d.t}</div>`;
+            if(d.imgMsg) h += `<img src="${d.imgMsg}" style="width:100%;border-radius:10px;margin-top:5px;">`;
+            div.innerHTML = h;
+            win.appendChild(div);
+        });
+        win.scrollTop = win.scrollHeight;
     });
 
     async function ytS() {
@@ -167,18 +171,16 @@
 
     db.ref('status/'+uID).set({ n: mySet.n, img: mySet.img, r: mySet.r, online: true });
     db.ref('status/'+uID).onDisconnect().remove();
-    db.ref('main_msgs').on('child_removed', () => location.reload());
-    
-    // قائمة المتصلين
+
     db.ref('status').on('value', s => {
         const l = document.getElementById('u-list');
         l.innerHTML = "";
         s.forEach(u => {
             let user = u.val();
             if(user.online) {
-                l.innerHTML += `<div style="padding:10px; display:flex; align-items:center; gap:10px;">
-                    <img src="${user.img}" style="width:30px; height:30px; border-radius:50%; border:1px solid var(--gold); object-fit:cover;">
-                    <span style="${user.r==='admin'?'color:var(--gold);':''}">${user.n}</span>
+                l.innerHTML += `<div style="padding:8px; display:flex; align-items:center; gap:10px; border-bottom:1px solid #111;">
+                    <img src="${user.img}" style="width:25px; height:25px; border-radius:50%; border:1px solid var(--gold); object-fit:cover;">
+                    <span style="font-size:13px; ${user.r==='admin'?'color:var(--gold);font-weight:bold;':''}">${user.n}</span>
                 </div>`;
             }
         });
